--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Jon1701/FCC-D3-Projects#readme",
   "dependencies": {
     "d3": "^4.2.1",
+    "d3-axis": "^1.0.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^2.3.2",
     "gulp-webserver": "^0.9.1",
